fix: overflow visible on home

--- a/logistic/static/styles/home.css
+++ b/logistic/static/styles/home.css
@@ -25,7 +25,7 @@
 body {
     min-height: 100vh;
     transition: var(--tran-05);
-    overflow: hidden;
+    overflow-y: visible;
 }
 
 ::selection {
